Add Amazee defaults

--- a/roles/gitlab/defaults/main.yml
+++ b/roles/gitlab/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 gitlab_personal_access_token:
-gitlab_endpoint: https://projects.govcms.gov.au
+gitlab_endpoint: https://gitlab.com
 gitlab_api_version: api/v4
 gitlab_api_url: "{{ gitlab_endpoint }}/{{ gitlab_api_version }}"
